src/ui_tests/pass_zero_runtime-err.rs
fn main() {
    let _ = notzero::nz!(0u16);
}